# sc_robust

./: .gitignore  README.md  RELEASING.md  ROADMAP.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish_pypi.yml
sc_robust/: __init__.py  example.py  find_consensus.py  gene_modules.py  normalization.py  process_de_test_split.py  qc.py  sc_robust.py  utils.py
sc_robust/data/: __init__.py
sc_robust/data/pathways/: __init__.py  c1.all.v2025.1.Hs.symbols.gmt  c4.all.v2025.1.Hs.symbols.gmt  c8.all.v2025.1.Hs.symbols.gmt  ccc.st_custom_cell_cycle.gmt  ccw.st_custom_cell_cycle.gmt
sc_robust/de/: __init__.py  base.py  differential_expression.py  pathways.py  plots.py  pseudobulk.py  workflow.py
scripts/: inventory_sc_robust_scratch.py
src/: __init__.py  example.py  find_consensus.py  normalization.py  sc_robust.py
tests/: test_anticor_integration.py  test_axis_conventions.py  test_dependencies.py  test_gene_modules.py  test_graph.py  test_pathways.py  test_robust_pipeline.py
